--- a/Bayesian_inference_1/Problem_Sets/PS_2_Key.qmd
+++ b/Bayesian_inference_1/Problem_Sets/PS_2_Key.qmd
@@ -599,7 +599,7 @@ What do you observe about the samples? How does this compare to the samples from
 
 > They should look completely disconnected. Even our thinned samples seemed to have some structure (points changing in correlated ways). These are totally independent.
 
-Make a scatter plot of sigma vs. mu from all the posterior samples:
+Make a scatter plot of sigma vs. mu from all the posterior samples. This is a "pairs" plot, which a common diagnostic tool for MCMC.
 
 ```{r}
 post_sav |> 
@@ -609,7 +609,7 @@ post_sav |>
 
 What do you observe in the scatter plot?
 
-> It looks totally random, like a perfect bivariate normal. There is no apparent structure or correlation between the samples. This doesn't always happen when one of the variables in a standard deviation. Since sd is bounded at 0, it's often not normally distributed in the posterior.
+> It looks totally random, like a perfect bivariate normal. There is no apparent structure or correlation between the samples. Note that this doesn't always happen when one of the variables in a standard deviation. Since sd is bounded at 0, it's often not normally distributed in the posterior. Similarly, pairs of samples will often be correlated in bivariate regression. When you change the slope of a regression line the intercept will also change. 
 
 Finally load the `coda` package. Convert the posterior to an `mcmc` object with `as.mcmc()`. Then run the autocorrelation diagnostics on this object with `autocorr.diag()`.
 
